--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Custom styles for this template -->
   <link href="css/grayscale.css" rel="stylesheet">
   <link rel="stylesheet" href="css/animate.min.css">
+
 </head>
 <script type="application/ld+json">
   {
@@ -70,11 +71,11 @@
             <a class="nav-link js-scroll-trigger" href="#contacts">Contatti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.facebook.com/itkapisa/" target="_blank">
+            <a class="nav-link myButton" href="https://www.facebook.com/itkapisa/" target="_blank">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.instagram.com/explore/tags/itka/" target="_blank">
+              <a class="nav-link myButton" href="https://www.instagram.com/explore/tags/itka/" target="_blank">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
@@ -113,16 +114,16 @@
             L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e della promozione del progetto.
           </p>
           <a href="http://www.itkataiji.com/" target="_blank">
-            <img src="img/itka.png" width="100" height="100" alt="fiwuk logo" class="img-fluid p-1">
+            <img src="img/itka.png" width="100" height="100" alt="fiwuk logo" class="img-fluid p-1 myButton">
           </a>
           <a href="http://www.toscanachen.it/" target="_blank">
-            <img src="img/toscana.png" width="240" height="90" alt="toscana chen logo" class="img-fluid p-1 my-1">
+            <img src="img/toscana.png" width="240" height="90" alt="toscana chen logo" class="img-fluid p-1 my-1 myButton">
           </a>
           <a href="https://www.fiwuk.com/" target="_blank">
-            <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-1">
-          </a>
+            <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-1 myButton">
+          </a>  
           <a href="http://www.csen.it/" target="_blank">
-            <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-1">
+            <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-1 myButton">
           </a>
         </div>
       </div>
@@ -143,7 +144,7 @@
         secondo livello taijiquan ITKA e Allenatore II Duan di Taijiquan F.I.Wu.K.
         </p>
 
-        <a class="btn btn-default" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
+        <a class="btn btn-default myButton" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
           <span class="fa fa-level-down" aria-hidden="true"></span>
         </a>
         <div class="collapse multi-collapse my-2" id="riconoscimenti">
@@ -180,7 +181,7 @@
             che aiutano il praticante a mantenere e rafforzare la propria salute psico-fisica...
             <br>
             <br>
-            <a class="btn btn-default" href="http://www.itkataiji.com/taijiquan-classico/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="http://www.itkataiji.com/taijiquan-classico/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -193,7 +194,7 @@
             Gianfranco Pace per diffondere più efficacemente il Taijiquan stile Chen tra i più giovani...
             <br>
             <br>
-            <a class="btn btn-default p-2" href="http://www.itkataiji.com/kungfu-di-chenjiagou/" target="_blank">Per saperne di più
+            <a class="btn btn-default p-2 myButton" href="http://www.itkataiji.com/kungfu-di-chenjiagou/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -208,7 +209,7 @@
             e per godere di buona salute...
             <br>
             <br>
-            <a class="btn btn-default" href="http://www.itkataiji.com/qi-gong/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="http://www.itkataiji.com/qi-gong/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -220,7 +221,7 @@
             serio nell’autodifesa...
             <br>
             <br>
-            <a class="btn btn-default" href="http://www.itkataiji.com/tsd-system/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="http://www.itkataiji.com/tsd-system/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -238,7 +239,7 @@
           <hr class="my-4">
           <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISA su:
             <br>
-            <a class="btn btn-default mt-4 text-lowercase" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
+            <a class="btn btn-default mt-4 text-lowercase myButton" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
               <strong>
                 <i class="fa fa-facebook" aria-hidden="true"></i>acebook
                 <i class="fa fa-external-link" aria-hidden="true"></i>
@@ -292,6 +293,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
+  <script src="js/myScript.js"></script>
 
 </body>
 
