--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="ITKA PISA, associazione sportiva del gruppo TOscana Chen. Corsi e lezioni di arti marziali tenuti dal maestro Gabriele Finocchiaro">
+  <meta name="description" content="ITKA PISA, associazione sportiva del gruppo Toscana Chen. Corsi e lezioni di arti marziali tenuti dal maestro Gabriele Finocchiaro">
   <meta name="keywords" content="taijiquan, pisa, arti marziali, kung fu, corsi, stile chen, gabriele finocchiaro, lezioni">
   <meta name="author" content="Raffaele Spataro">
 
@@ -71,11 +71,11 @@
             <a class="nav-link js-scroll-trigger" href="#contacts">Contatti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link myButton" href="https://www.facebook.com/itkapisa/" target="_blank">
+            <a class="nav-link" href="https://www.facebook.com/itkapisa/" target="_blank">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <li class="nav-item">
-              <a class="nav-link myButton" href="https://www.instagram.com/explore/tags/itka/" target="_blank">
+              <a class="nav-link" href="https://www.instagram.com/explore/tags/itka/" target="_blank">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
