meta description update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="ITKA PISA, associazione sportiva del gruppo Toscana Chen. Corsi e lezioni di arti marziali tenuti dal maestro Gabriele Finocchiaro">
+  <meta name="description" content="Sito ufficiale della ITKA PISA, associazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen. Si organizzano corsi e lezioni di Taijiquan, Kung Fu, Difesa Personale e altro ancora.">
   <meta name="keywords" content="taijiquan, pisa, arti marziali, kung fu, corsi, stile chen, gabriele finocchiaro, lezioni">
   <meta name="author" content="Raffaele Spataro">
 
