--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </a>
           <a href="https://www.fiwuk.com/" target="_blank">
             <img src="img/fiwuk png 623x600.png" width="90" height="90" alt="fiwuk logo" class="img-fluid p-1 myButton">
-          </a>  
+          </a>
           <a href="http://www.csen.it/" target="_blank">
             <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-1 myButton">
           </a>
@@ -253,12 +253,12 @@
       <div class="row my-2">
         <div class="col-lg-4 mx-auto my-1 text-center">
           <i class="fa fa-whatsapp fa-3x sr-contact" aria-hidden="true"></i>
-          <p>(+39) 348-523-3039</p>
+          <p class="p-2">(+39) 348-523-3039</p>
         </div>
         <div class="col-lg-4 mx-auto my-1 text-center">
           <i class="fa fa-facebook-official fa-3x sr-contact" aria-hidden="true"></i>
 
-          <p>
+          <p class="p-2">
             <a href="https://www.facebook.com/gabriele.finocchiaro.1422?ref=br_rs" target="_blank">Gabriele Finocchiaro
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
@@ -266,7 +266,7 @@
         </div>
         <div class="col-lg-4 mx-auto my-1 text-center">
           <i class="fa fa-envelope-o fa-3x sr-contact" aria-hidden="true"></i>
-          <p>
+          <p class="p-2">
             <a href="mailto:ygabriele.finocchiaro@hotmail.com">gabriele.finocchiaro@hotmail.com</a>
           </p>
         </div>
