--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </section>
 
   <!-- Maestro Section -->
-  <section id="maestro" class="maestro-section content-section text-center" title="Gabriele Finocchiaro, il maestro">
+  <section id="maestro" class="maestro-section content-section text-center">
     <div class="container">
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
@@ -167,7 +167,7 @@
   </section>
 
   <!-- Corsi Section -->
-  <section id="corsi" class="content-section text-center" title="I corsi offerti">
+  <section id="corsi" class="content-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-5">
@@ -233,7 +233,7 @@
   </section>
 
   <!-- Contacts Section -->
-  <section id="contacts" title="Contatti">
+  <section id="contacts">
     <div class="container content-section">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
