--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: default
   </section>
 
   <!-- Maestro Section -->
-  <section id="maestro" class="maestro-section content-section text-center">
+  <section id="maestro" class="maestro-section content-section text-center" title="Gabriele Finocchiaro, il maestro">
     <div class="container">
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
@@ -109,7 +109,7 @@ layout: default
   </section>
 
   <!-- Corsi Section -->
-  <section id="corsi" class="content-section text-center">
+  <section id="corsi" class="content-section text-center" title="I corsi offerti">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-5">
@@ -175,7 +175,7 @@ layout: default
   </section>
 
   <!-- Contacts Section -->
-  <section id="contacts">
+  <section id="contacts" title="Contatti">
     <div class="container content-section">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
