Revert "finger crossed"
This reverts commit 5378781b1424c0bf69538626e3e12354cac90017.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="it">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Sito ufficiale della ITKA PISA, associazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.">
+  <meta name="keywords" content="taijiquan, pisa, arti marziali, kung fu, corsi, stile chen, gabriele finocchiaro, lezioni">
+
+  <meta name="author" content="Raffaele Spataro">
+
+  <title>ITKA PISA</title>
+  <link rel="canonical" href="http://www.itkapisa.it" />
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom fonts for this template -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!-- Custom styles for this template -->
+  <link href="css/grayscale.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/animate.min.css">
+
+</head>
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
@@ -27,7 +46,46 @@ layout: default
 
 <body id="page-top">
 
-{% include navigation.html %}
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <img src="img/itka.png" width="60" height="60" alt="fiwuk logo" class="img-fluid">
+
+      </a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">Chi siamo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#maestro">Il maestro</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#corsi">I corsi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contacts">Contatti</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.facebook.com/itkapisa/" target="_blank">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.instagram.com/explore/tags/itka/" target="_blank">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+              </a>
+            </li>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <!-- Intro Header -->
   <header class="masthead">
@@ -35,7 +93,7 @@ layout: default
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1 class="brand-heading">ITKA EXPERIMENTAL</h1>
+            <h1 class="brand-heading">ITKA PISA</h1>
             <h4 class="intro-text">International Taijiquan Kung-Fu Association Pisa</h4>
             <a href="#about" class="btn btn-circle js-scroll-trigger p-1 animated pulse infinite">
               <i class="fa fa-angle-double-down"></i>
@@ -217,3 +275,24 @@ layout: default
       </div>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <p>Copyright &copy; ITKA PISA 2018</p>
+    </div>
+  </footer>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+  <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
+  <!-- Custom scripts for this template -->
+  <script src="js/grayscale.min.js"></script>
+  <script src="js/myScript.js"></script>
+
+</body>
+
+</html>
