--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="Raffaele Spataro">
 
   <title>ITKA PISA</title>
+  <link rel="icon" href="/favicon.png" type="image/png" />
   <link rel="canonical" href="http://www.itkapisa.it" />
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -133,7 +134,7 @@
   </section>
 
   <!-- Maestro Section -->
-  <section id="maestro" class="maestro-section content-section text-center" title="Gabriele Finocchiaro, il maestro">
+  <section id="maestro" class="maestro-section content-section text-center">
     <div class="container">
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
@@ -167,7 +168,7 @@
   </section>
 
   <!-- Corsi Section -->
-  <section id="corsi" class="content-section text-center" title="I corsi offerti">
+  <section id="corsi" class="content-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center mb-5">
@@ -233,7 +234,7 @@
   </section>
 
   <!-- Contacts Section -->
-  <section id="contacts" title="Contatti">
+  <section id="contacts">
     <div class="container content-section">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
