updated course links

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             che aiutano il praticante a mantenere e rafforzare la propria salute psico-fisica...
             <br>
             <br>
-            <a class="btn btn-default myButton" href="http://www.itkataiji.com/taijiquan-classico/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="http://www.itkataiji.com/taijiquanclassico/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -197,7 +197,7 @@
             Gianfranco Pace per diffondere più efficacemente il Taijiquan stile Chen tra i più giovani...
             <br>
             <br>
-            <a class="btn btn-default p-2 myButton" href="http://www.itkataiji.com/kungfu-di-chenjiagou/" target="_blank">Per saperne di più
+            <a class="btn btn-default p-2 myButton" href="http://www.itkataiji.com/kungfu/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -212,7 +212,7 @@
             e per godere di buona salute...
             <br>
             <br>
-            <a class="btn btn-default myButton" href="http://www.itkataiji.com/qi-gong/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="http://www.itkataiji.com/nei-gong-qi-gong/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -224,7 +224,7 @@
             serio nell’autodifesa...
             <br>
             <br>
-            <a class="btn btn-default myButton" href="http://www.itkataiji.com/tsd-system/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="http://www.itkataiji.com/difesa-personale/" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
