--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
               <li itemprop="award">2015 - Tao Lou mani nude, Campionati regionali W.T.K.A., 1° classificato</li>
               <li itemprop="award">2015 - Tao Lou arma lunga, Campionati regionali W.T.K.A., 1° classificato</li>
               <li itemprop="award">2018 - Tao Lou Coppa Italia F.I.Wu.K., 2° classificato</li>
+              <li itemprop="award">2018 - Tao Lou campionato italiano F.I.Wu.K., 2° classificato</li>
+              <li itemprop="award">2018 - Tui Shou campionato italiano F.I.Wu.K., 1° classificato</li>
             </ul>
           </div>
         </div>
