--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
           <span>Gabriele Finocchiaro</strong>
         </span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro Giovambattista Scavo dal 2007.
         <br>
-        <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. È inoltre allenatore di
-        secondo livello taijiquan ITKA e Allenatore II Duan di Taijiquan F.I.Wu.K.
+        <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. Tra i suoi titoli ufficiali figurano quelli di allenatore di
+        secondo livello taijiquan ITKA, Allenatore II Duan di Taijiquan F.I.Wu.K. e Istruttore C.S.E.N. .
         </p>
 
         <a class="btn btn-default myButton" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
