--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             che aiutano il praticante a mantenere e rafforzare la propria salute psico-fisica...
             <br>
             <br>
-            <a class="btn btn-default myButton" href="http://www.itkataiji.com/taijiquanclassico/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/taijiquan-classico.html" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -199,7 +199,7 @@
             Gianfranco Pace per diffondere più efficacemente il Taijiquan stile Chen tra i più giovani...
             <br>
             <br>
-            <a class="btn btn-default p-2 myButton" href="http://www.itkataiji.com/kungfu/" target="_blank">Per saperne di più
+            <a class="btn btn-default p-2 myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/kung-fu-di-chenjiagou.html" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -214,7 +214,7 @@
             e per godere di buona salute...
             <br>
             <br>
-            <a class="btn btn-default myButton" href="http://www.itkataiji.com/nei-gong-qi-gong/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/nei-gong-qi-gong.html" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
@@ -226,7 +226,7 @@
             serio nell’autodifesa...
             <br>
             <br>
-            <a class="btn btn-default myButton" href="http://www.itkataiji.com/difesa-personale/" target="_blank">Per saperne di più
+            <a class="btn btn-default myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/difesa-personale.html" target="_blank">Per saperne di più
               <i class="fa fa-external-link" aria-hidden="true"></i>
             </a>
           </p>
