--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta name="author" content="Raffaele Spataro">
 
-  <title>ITKA PISA</title>
+  <title>ITKA PISTOIA</title>
   <link rel="icon" href="/favicon.png" type="image/png" />
   <link rel="canonical" href="http://www.itkapisa.it" />
   <!-- Bootstrap core CSS -->
