--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   {
     "@context": "http://schema.org",
     "@type": "Organization",
-    "name": "ITKA PISA",
+    "name": "ITKA PISTOIA",
     "url": "http://www.itkapisa.it",
     "logo": "http://www.itkapisa.it/img/itka.png",
     "foundingDate": "2018",
@@ -94,7 +94,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1 class="brand-heading">ITKA PISA</h1>
+            <h1 class="brand-heading">ITKA PISTOIA</h1>
             <h4 class="intro-text">International Taijiquan Kung-Fu Association Pisa</h4>
             <a href="#about" class="btn btn-circle js-scroll-trigger p-1 animated pulse infinite">
               <i class="fa fa-angle-double-down"></i>
@@ -113,7 +113,7 @@
           <h2>Chi siamo</h2>
           <hr>
           <p>
-            <strong>ITKA PISA</strong> è un'assciazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.
+            <strong>ITKA PISTOIA</strong> è un'assciazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.
             L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e della promozione del progetto.
           </p>
           <a href="http://www.itkataiji.com/" target="_blank">
@@ -242,7 +242,7 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Contatti</h2>
           <hr class="my-4">
-          <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISA su:
+          <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISTOIA su:
             <br>
             <a class="btn btn-default mt-4 text-lowercase myButton" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
               <strong>
@@ -282,7 +282,7 @@
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <p>Copyright &copy; ITKA PISA 2018</p>
+      <p>Copyright &copy; ITKA PISTOIA 2018-2022</p>
     </div>
   </footer>
   <!-- Bootstrap core JavaScript -->
