--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1 class="brand-heading">ITKA PISTOIA</h1>
-            <h4 class="intro-text">International Taijiquan Kung-Fu Association Pisa</h4>
+            <h2 class="brand-heading">ITKA PISTOIA</h2>
+            <h4 class="intro-text">International Taijiquan Kung-Fu Association Pistoia</h4>
             <a href="#about" class="btn btn-circle js-scroll-trigger p-1 animated pulse infinite">
               <i class="fa fa-angle-double-down"></i>
             </a>
