--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Sito ufficiale della ITKA PISA, associazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.">
+  <meta name="description" content="Sito ufficiale della ITKA PISTOIA, associazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.">
   <meta name="keywords" content="taijiquan, pisa, arti marziali, kung fu, corsi, stile chen, gabriele finocchiaro, lezioni">
 
   <meta name="author" content="Raffaele Spataro">
 
   <title>ITKA PISTOIA</title>
   <link rel="icon" href="/favicon.png" type="image/png" />
-  <link rel="canonical" href="http://www.itkapisa.it" />
+  <link rel="canonical" href="http://www.itkapistoia.it" />
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template -->
@@ -26,8 +26,8 @@
     "@context": "http://schema.org",
     "@type": "Organization",
     "name": "ITKA PISTOIA",
-    "url": "http://www.itkapisa.it",
-    "logo": "http://www.itkapisa.it/img/itka.png",
+    "url": "http://www.itkapistoia.it",
+    "logo": "http://www.itkapistoia.it/img/itka.png",
     "foundingDate": "2018",
     "founders": [{
       "@type": "Person",
@@ -40,7 +40,7 @@
       "email": "gabriele.finocchiaro@hotmail.com"
     },
     "sameAs": [
-      "https://www.facebook.com/itkapisa/"
+      "https://www.facebook.com/itkapistoia/"
     ]
   }
 </script>
@@ -144,7 +144,7 @@
         </span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro Giovambattista Scavo dal 2007.
         <br>
         <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. Tra i suoi titoli ufficiali figurano quelli di allenatore di
-        secondo livello taijiquan ITKA, Allenatore II Duan di Taijiquan F.I.Wu.K. e Istruttore C.S.E.N. .
+        terzo livello taijiquan ITKA, Allenatore II Duan di Taijiquan F.I.Wu.K. e Istruttore C.S.E.N. .
         </p>
 
         <a class="btn btn-default myButton" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
