--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a class="nav-link js-scroll-trigger" href="#contacts">Contatti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.facebook.com/itkapisa/" target="_blank">
+            <a class="nav-link" href="https://www.facebook.com/itkapistoia/" target="_blank">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <li class="nav-item">
@@ -244,7 +244,7 @@
           <hr class="my-4">
           <p>Per tutti gli aggiornamenti su corsi ed eventi, segui la pagina ufficiale ITKA PISTOIA su:
             <br>
-            <a class="btn btn-default mt-4 text-lowercase myButton" href="https://www.facebook.com/itkapisa/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
+            <a class="btn btn-default mt-4 text-lowercase myButton" href="https://www.facebook.com/itkapistoia/" target="_blank" style="font-family: 'Open Sans', sans-serif;">
               <strong>
                 <i class="fa fa-facebook" aria-hidden="true"></i>acebook
                 <i class="fa fa-external-link" aria-hidden="true"></i>
