--- a/index.html
+++ b/index.html
@@ -141,10 +141,9 @@
         <hr>
         <strong>
           <span>Gabriele Finocchiaro</strong>
-        </span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace e il maestro Giovambattista Scavo dal 2007.
+        </span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace dal 2007.
         <br>
-        <br> Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. Tra i suoi titoli ufficiali figurano quelli di allenatore di
-        terzo livello taijiquan ITKA, Allenatore II Duan di Taijiquan F.I.Wu.K. e Istruttore C.S.E.N. .
+        <br>Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. Tra i suoi titoli ufficiali figurano quelli di istruttore I livello taijiquan ITKA, Allenatore II Duan di Taijiquan F.I.Wu.K. e Istruttore C.S.E.N. . .
         </p>
 
         <a class="btn btn-default myButton" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
