--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
               <li itemprop="award">2015 - Tao Lou arma lunga, Campionati regionali W.T.K.A., 1° classificato</li>
               <li itemprop="award">2018 - Tao Lou Coppa Italia F.I.Wu.K., 2° classificato</li>
               <li itemprop="award">2018 - Tao Lou campionato italiano F.I.Wu.K., 2° classificato</li>
-              <li itemprop="award">2018 - Tui Shou campionato italiano F.I.Wu.K., 1° classificato</li>
+              <li itemprop="award">2018 - Tui Shou campionato italiano F.I.Wu.K., 1° classificato</li>          
+              <li itemprop="award">2022 - Tui Shou piedi fissi, Tuishou Internacional Competition Daniel Bea Moret 3° classificato</li>
+              <li itemprop="award">2022 - Tui Shou libero, Tuishou Internacional Competition Daniel Bea Moret 2° classificato</li>
+              <li itemprop="award">2022 - Tui Shou libero categoria Master, Tuishou Internacional Competition Daniel Bea Moret 3° classificato</li>
             </ul>
           </div>
         </div>
