--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.instagram.com/explore/tags/itka/" target="_blank">
+              <a class="nav-link" href="https://www.instagram.com/taijiquan_itka_pistoia/" target="_blank">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
@@ -258,11 +258,11 @@
         </div>
       </div>
       <div class="row my-2">
-        <div class="col-lg-4 mx-auto my-1 text-center">
+        <div class="col-lg-3 mx-auto my-1 text-center">
           <i class="fa fa-whatsapp fa-3x sr-contact" aria-hidden="true"></i>
           <p class="p-2">(+39) 348-523-3036</p>
         </div>
-        <div class="col-lg-4 mx-auto my-1 text-center">
+        <div class="col-lg-3 mx-auto my-1 text-center">
           <i class="fa fa-facebook-official fa-3x sr-contact" aria-hidden="true"></i>
 
           <p class="p-2">
@@ -271,7 +271,16 @@
             </a>
           </p>
         </div>
-        <div class="col-lg-4 mx-auto my-1 text-center">
+                <div class="col-lg-3 mx-auto my-1 text-center">
+          <i class="fa fa fa-instagram fa-3x sr-contact" aria-hidden="true"></i>
+
+          <p class="p-2">
+            <a href="https://www.instagram.com/taijiquan_itka_pistoia/" target="_blank">ITKA Pistoia
+              <i class="fa fa-external-link" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+        <div class="col-lg-3 mx-auto my-1 text-center">
           <i class="fa fa-envelope-o fa-3x sr-contact" aria-hidden="true"></i>
           <p class="p-2">
             <a href="mailto:ygabriele.finocchiaro@hotmail.com">gabriele.finocchiaro@hotmail.com</a>
