--- a/index.html
+++ b/index.html
@@ -233,6 +233,22 @@
             </a>
           </p>
         </div>
+
+        <div class="row">
+        <div class="col-lg-6">
+          <h3 class="title-frame p-2">Sport da Combattimento</h3>
+          <p>All’ITKA viene posta particolare attenzione e professionalità a chi desidera applicare il Taijiquan al fine della competizione sportiva. 
+            I praticanti si allenano secondo un circuito di base, “Taiji Match”, che si basa su tutti i principi Taiji, per poi specializzarsi in una o due specialità seguendo i relativi regolamenti...
+            <br>
+            <br>
+            <a class="btn btn-default myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/sport-da-combattimento.html" target="_blank">Per saperne di più
+              <i class="fa fa-external-link" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+
+        </div>
+
       </div>
     </div>
   </section>
