--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
           <h2>Chi siamo</h2>
           <hr>
           <p>
-            <strong>ITKA PISTOIA</strong> è un'assciazione sportiva affiliata con la sede nazionale ITKA e la scuola ITKA Toscana Chen.
-            L'associazione è gestita dal maestro Gabriele Finocchiaro che si occupa dei corsi e della promozione del progetto.
+            L'<strong>ITKA (International Taijiquan Kung-FU Association)</strong> è una scuola di taijiquan fondata nel 2003 e diretta dal Maestro Gianfranco Pace che, dopo anni di pratica e di studio con diversi tra i più importanti rappresentanti mondiali del Taiji Quan stile Chen, ha deciso di creare una scuola che proponesse un programma tecnico completo secondo la tradizione ma fosse anche il frutto delle sue esperienze di pratica.  
+Ad oggi conta oltre 100 scuole affiliate non solo in Italia ed in Europa (Spagna, Austria, Germania, Svizzera) ma anche in Sudamerica (Argentina, Brasile, Chile e Colombia) e una sede in Africa (Angola) che seguono una formazione costante e continua direttamente con il Maestro. 
+Il programma tecnico della scuola vanta 5 aree di interesse che coprono tutti gli aspetti del taijiquan e che permettono a chiunque di avvicinarsi a questo stile.
           </p>
           <a href="http://www.itkataiji.com/" target="_blank">
             <img src="img/itka.png" width="100" height="100" alt="fiwuk logo" class="img-fluid p-1 myButton">
@@ -128,6 +129,7 @@
           <a href="http://www.csen.it/" target="_blank">
             <img src="img/csen png 290x290.png" width="90" height="90" alt="csen logo" class="img-fluid p-1 myButton">
           </a>
+        </p>
         </div>
       </div>
     </div>
@@ -139,12 +141,8 @@
       <div class="col-lg-8 mx-auto">
         <h2>Il Maestro</h2>
         <hr>
-        <strong>
-          <span>Gabriele Finocchiaro</strong>
-        </span> pratica Taijiquan presso la scuola ITKA con il maestro Gianfranco Pace dal 2007.
-        <br>
-        <br>Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. Tra i suoi titoli ufficiali figurano quelli di istruttore I livello taijiquan ITKA, Allenatore II Duan di Taijiquan F.I.Wu.K. e Istruttore C.S.E.N. . .
-        </p>
+Il Maestro <strong>Gabriele Finocchiaro</strong> inizia fin da bambino a praticare arti marziali (Judo, Karate, Lotta Greco-Romana, Shaolin e scherma) e nel 2007 conosce il Maestro Gianfranco Pace e inizia a praticare il Taijiquan nella sede centrale ITKA. Nel 2008 a causa di un incidente in moto subisce una serie di lesioni a legamenti ed articolazioni che gli causano gravi problemi fisici. Nonostante la diagnosi di permanente compromissione della deambulazione, ha continuato ad allenarsi anche con le stampelle, riuscendo ad aggirare la disabilità e arrivando a vincere numerose competizioni, sia italiane che mondiali. Nel 2018 si laurea in ingegneria industriale lavorando anche sulla cibernetica fisiologica e decide di utilizzare le sue competenze di meccanica e bio-meccanica per migliorare il lavoro sul Taijiquan.
+Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu di Chenjagou. Tra i suoi titoli ufficiali figurano quelli di istruttore I livello taijiquan ITKA, Allenatore II Duan di Taijiquan F.I.Wu.K. e Istruttore C.S.E.N. .
 
         <a class="btn btn-default myButton" data-toggle="collapse" href="#riconoscimenti" role="button" aria-expanded="false" aria-controls="riconoscimenti">Riconoscimenti
           <span class="fa fa-level-down" aria-hidden="true"></span>
@@ -184,8 +182,7 @@
         <div class="col-lg-6">
           <h3 class="title-frame p-2">Taijiquan stile Chen</h3>
 
-          <p>L'esercizio del Taijiquan si è diffuso in tutto il mondo per i suoi movimenti lenti, fluidi, continui ed armoniosi
-            che aiutano il praticante a mantenere e rafforzare la propria salute psico-fisica...
+          <p>È un’arte marziale cinese interna famosa per i suoi movimenti lenti e fluidi e per i benefici alla salute che però comprende anche lo studio le armi, lo studio delle cosiddette “forme veloci”, lo studio del Tui Shou (spinta delle mani).
             <br>
             <br>
             <a class="btn btn-default myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/taijiquan-classico.html" target="_blank">Per saperne di più
@@ -197,8 +194,7 @@
         <div class="col-lg-6">
           <h3 class="title-frame p-2">Kung Fu di Chenjiagou</h3>
 
-          <p>Il programma denominato “Kung Fu di Chenjiagou” è stato codificato formalmente nel Dicembre del 2002 dal Maestro
-            Gianfranco Pace per diffondere più efficacemente il Taijiquan stile Chen tra i più giovani...
+          <p>dedicato ai ragazzi o a chi vuole approcciarsi a questo stile in maniera più dinamica. Questo programma adatto a chi predilige l’aspetto marziale di quest’arte: lo studio inizia direttamente con le “forme veloci” e con i fondamentali di combattimento tradizionale.
             <br>
             <br>
             <a class="btn btn-default p-2 myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/kung-fu-di-chenjiagou.html" target="_blank">Per saperne di più
@@ -211,9 +207,7 @@
       <div class="row">
         <div class="col-lg-6">
           <h3 class="title-frame p-2" target="_blank">Qi Gong</h3>
-          <p>Il Qi gong (lavoro sull’energia) è stato in epoche antiche parte essenziale della ricerca della longevità e del
-            benessere psicofisico. L’abbondanza di Qi nell’uomo è il fattore energetico fondamentale per vincere le malattie
-            e per godere di buona salute...
+          <p>Un lavoro mirato allo studio del lavoro interno e dedicato a chi del taijiquan predilige lo studio dell’aspetto salutistico. Corredato da esercizi per sviluppare un lavoro introspettivo e propriocettivo tipico di quest’arte marziale, questo programma viene spesso studiato anche dai praticanti di altri stili che vogliono affinare il lavoro interno.
             <br>
             <br>
             <a class="btn btn-default myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/nei-gong-qi-gong.html" target="_blank">Per saperne di più
@@ -222,10 +216,8 @@
           </p>
         </div>
         <div class="col-lg-6">
-          <h3 class="title-frame p-2">Difesa Personale</h3>
-          <p>Il Taijiquan Self Defence System è un sistema di auto difesa pratico, basato sui principi fondamentali che provengono
-            dal Taijiquan. Il TSD interessa sopratutto chi non ha mai praticato arti marziali ma vuole intraprendere un percorso
-            serio nell’autodifesa...
+          <h3 class="title-frame p-2">TSD SYSTEM</h3>
+          <p>Il TSD SYSTEM (Taijiquan Self Defence System) èun programma che applica i principi del taijiquan alla difesa personale dedicandosi soprattutto al lavoro a coppia (ad esempio proiezioni, lavoro sui colpi a percussione, sulla “forza sensibile”, ecc…) ma approfondendo anche il lavoro introspettivo per riuscire a sviluppare l’abilità di mantere lucidità e distacco in situazioni di pericolo.
             <br>
             <br>
             <a class="btn btn-default myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/difesa-personale.html" target="_blank">Per saperne di più
@@ -236,9 +228,9 @@
 
         <div class="row">
         <div class="col-lg-6">
-          <h3 class="title-frame p-2">Sport da Combattimento</h3>
-          <p>All’ITKA viene posta particolare attenzione e professionalità a chi desidera applicare il Taijiquan al fine della competizione sportiva. 
-            I praticanti si allenano secondo un circuito di base, “Taiji Match”, che si basa su tutti i principi Taiji, per poi specializzarsi in una o due specialità seguendo i relativi regolamenti...
+          <h3 class="title-frame p-2">Taiji Match</h3>
+          <p>
+             Il programma dedicato a chi vuole fare sport da combattimento. Questo lavoro applica i principi della nostra arte marziale contestualizzandoli in applicazioni adatte al ring (Pugilato, Kick boxing, Sanda, MMA, K1, Tui Shou, ecc…).
             <br>
             <br>
             <a class="btn btn-default myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/sport-da-combattimento.html" target="_blank">Per saperne di più
