--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Nel 2016 raggiunge il livello di ‘fascia nera’ nella disciplina del kung-fu 
         <div class="col-lg-6">
           <h3 class="title-frame p-2">Kung Fu di Chenjiagou</h3>
 
-          <p>dedicato ai ragazzi o a chi vuole approcciarsi a questo stile in maniera più dinamica. Questo programma adatto a chi predilige l’aspetto marziale di quest’arte: lo studio inizia direttamente con le “forme veloci” e con i fondamentali di combattimento tradizionale.
+          <p>Dedicato ai ragazzi o a chi vuole approcciarsi a questo stile in maniera più dinamica. Questo programma adatto a chi predilige l’aspetto marziale di quest’arte: lo studio inizia direttamente con le “forme veloci” e con i fondamentali di combattimento tradizionale.
             <br>
             <br>
             <a class="btn btn-default p-2 myButton" href="https://www.itkataiji.com/it/corsi-e-stage/corsi-in-palestra/kung-fu-di-chenjiagou.html" target="_blank">Per saperne di più
